# QMidi

./: .gitmodules  CMakeLists.txt  QMidi-config.cmake  README.md
.github/workflows/: ccpp.yml
include/: QMidi  QMidiInterface  include.pri  qmidi.h  qmidi_global.h  qmidiinterface.h
src/: CMakeLists.txt  qmidi.cpp  qmidi_p.h  qmidi_p.h.autosave  qmidiinterface.cpp  qmidiinterface_p.h  src.pro
tests/: CMakeLists.txt  libs.pri  tests.pro
tests/midi/: CMakeLists.txt  midi.pro  tst_midi.cpp
